@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-24T08:14:19Z",
-  "count_outdated" : 206,
-  "uniques_outdated" : 177,
+  "timestamp" : "2023-10-25T00:49:05Z",
+  "count_outdated" : 208,
+  "uniques_outdated" : 179,
   "count" : 215,
   "uniques" : 186,
   "clones" : [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-11T00:00:00Z",
       "count": 1,
